# fmat

./: README.md  compose.yaml
.github/workflows/: codeql.yml
auth/: .env  Dockerfile  pyproject.toml
auth/app/: main.py
auth/app/config/: basicemail.py  database.py  email.py  security.py  setting.py  validation.py
auth/app/models/: user.py
auth/app/routes/: user.py
auth/app/schemas/: user.py  users.proto  users_pb2.py
auth/app/services/: email.py  user.py  user_kafka.py
auth/app/templates/users/: account-verification-confirmation.html  accountverification.html
auth/tests/: main.py
mart/: .env  Dockerfile  pyproject.toml
mart/app/: main.py  mart.proto  mart_pb2.py  schema.py  setting.py
mart/app/config/: database.py  kafka.py
mart/app/routes/: order.py  product.py
payments/: Dockerfile  pyproject.toml
payments/Frontend/: checkout.html  success.html
payments/payments/: main.py
