[tool.poetry]
name = "payments"
version = "0.1.0"
description = ""
authors = ["Muhammad Hamid <61172566+hamidkhans651@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
stripe = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
